<resources>
    <string name="app_name">PlayList Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="person_email" translatable="false">dfater4@yandex.ru</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found" translatable="false">Нчего не нашлось</string>
    <string name="no_internet" translatable="false"> Проблемы со связью \n\ \n\ Загрузка не удалась.  Проверьте \n\ подключение к интернету</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="time_duration">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="year_of_release">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_time">"00:00"</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_not_found">Вы не создали\n\ни одного плейлиста</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="favourites_tracks_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="back">Назад</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_create_playlist">Завершить создание плейлиста?</string>
    <string name="all_data_not_saved_will_be_lost">Все не сохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_status_added">Добавлено в плейлист %s</string>
    <string name="add_status_exist">Трек уже добавлен в плейлист %s</string>
    <string name="add_status_error">Ошибка добавления в плейлист %s</string>
    <string name="playlist_statistics">"%1$s · %2$s"</string>
    <string name="playlist_tracks_empty">В этом плейлисте нет треков</string>
    <string name="playlist_menu_button">меню плейлиста</string>
    <string name="playlist_menu_share_button">Поделиться</string>
    <string name="playlist_menu_edit_button">Редактировать информацию</string>
    <string name="playlist_menu_delete_button">Удалить плейлист</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_dialog_cancel_button">отмена</string>
    <string name="delete_track_dialog_yes_button">удалить</string>
    <string name="share_playlist_empty_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_dialog_cancel_button">отмена</string>
    <string name="delete_playlist_dialog_yes_button">удалить</string>
    <string name="button_save_playlist">Сохранить</string>
    <string name="button_edit_playlist">Редактировать</string>

</resources>