<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".setting.ui.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings"
            style="@style/upper_bar_text_view"/>
    </LinearLayout>

    <Switch
        android:id="@+id/themeSwitcher"
        style="@style/day_night_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/night_theme"
 />


    <TextView
        android:id="@+id/viewShare"
        style="@style/setting_activity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/viewService"
        style="@style/setting_activity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/viewUserAgreement"
        style="@style/setting_activity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow_forward" />
</LinearLayout>
